# conecta4-sfml

./: CMakeLists.txt  Jugador.cpp  Jugador.h  Tablero.cpp  Tablero.h  colores.h  main.cpp
